added latest bikes and happy clients reviews sections

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <a href="#slide2" class="btn btn-circle">❯</a>
                 </div>
             </div>
-             
+
             <div id="slide2" class="carousel-item relative w-full">
                 <div class="flex flex-col lg:flex-row p-12 lg:p-24">
                     <!-- text contents -->
@@ -185,7 +185,176 @@
 
     <!-- Main section -->
     <main class="md:container mx-auto">
+        <!-- featured bike section -->
+        <section></section>
 
+        <!-- Latest Bike Section -->
+        <section class="my-24">
+            <h3 class="text-5xl font-semibold text-center mb-12">Latest Bikes</h3>
+            <!-- cards -->
+            <div class="grid grid-cols-1 gap-12 md:grid-cols-2 lg:grid-cols-3">
+                <!-- card 1 -->
+                <div class="card bg-base-100 shadow-xl">
+                    <figure>
+                        <img src="images/others/latest1.png" alt="Shoes" />
+                    </figure>
+                    <div class="card-body space-y-5">
+                        <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                            fermentum amet faucibus sed id nisi lectus at.
+                        </p>
+                        <div class="card-actions">
+                            <button class="btn bg-bike-primary text-white">
+                                Read More
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <!-- card 2 -->
+                <div class="card bg-base-100 shadow-xl">
+                    <figure>
+                        <img src="images/others/latest2.png" alt="Shoes" />
+                    </figure>
+                    <div class="card-body space-y-5">
+                        <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                            fermentum amet faucibus sed id nisi lectus at.
+                        </p>
+                        <div class="card-actions">
+                            <button class="btn bg-bike-primary text-white">
+                                Read More
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <!-- card 3 -->
+                <div class="card bg-base-100 shadow-xl">
+                    <figure>
+                        <img src="images/others/latest3.png" alt="Shoes" />
+                    </figure>
+                    <div class="card-body space-y-5">
+                        <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                            fermentum amet faucibus sed id nisi lectus at.
+                        </p>
+                        <div class="card-actions">
+                            <button class="btn bg-bike-primary text-white">
+                                Read More
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- happy clients section -->
+        <section class="my-24">
+            <h3 class="font-semibold text-[48px] text-center mb-[50px]">Happy <span class="text-bike-primary">Clients says</span></h3>
+
+            <!-- client card container -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-11">
+                <!-- card1 -->
+                <div class="border text-center">
+                    <div class="avatar mx-[87px] mt-[30px]">
+                        <div class="w-36 rounded-full">
+                            <img src="images/others/user-1.png" alt="">
+                        </div>
+                    </div>
+                    <!-- card1 texts -->
+                    <div class="space-y-4 p-9">
+                        <p>
+                            Slate helps you see how
+                            many more days you need
+                            to work to reach your financial
+                            goal for the month and year.
+                        </p>
+                        <div class="rating">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                checked="checked" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <h3 class="font-semibold text-[14px] text-[#23A6F0]">
+                            Regina Miles
+                        </h3>
+                        <h4 class="font-semibold text-[14px]">
+                            Banker
+                        </h4>
+                    </div>
+                </div>
+
+                <!-- card2 -->
+                <div class="border text-center">
+                    <div class="avatar mx-[87px] mt-[30px]">
+                        <div class="w-36 rounded-full">
+                            <img src="images/others/user-2.png" alt="">
+                        </div>
+                    </div>
+                    <!-- card2 texts -->
+                    <div class="space-y-4 p-9">
+                        <p>
+                            Slate helps you see how
+                            many more days you need
+                            to work to reach your financial
+                            goal for the month and year.
+                        </p>
+                        <div class="rating">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                checked="checked" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <h3 class="font-semibold text-[14px] text-[#23A6F0]">
+                            Regina Miles
+                        </h3>
+                        <h4 class="font-semibold text-[14px]">
+                            Banker
+                        </h4>
+                    </div>
+                </div>
+
+                <!-- card3 -->
+                <div class="border text-center">
+                    <div class="avatar mx-[87px] mt-[30px]">
+                        <div class="w-36 rounded-full">
+                            <img src="images/others/user-3.png" alt="">
+                        </div>
+                    </div>
+                    <!-- card3 texts -->
+                    <div class="space-y-4 p-9">
+                        <p>
+                            Slate helps you see how
+                            many more days you need
+                            to work to reach your financial
+                            goal for the month and year.
+                        </p>
+                        <div class="rating">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                checked="checked" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <h3 class="font-semibold text-[14px] text-[#23A6F0]">
+                            Regina Miles
+                        </h3>
+                        <h4 class="font-semibold text-[14px]">
+                            Banker
+                        </h4>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
     </main>
 
     <!-- footer section -->
