added faq and footer section

--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
                             Ride-on R15 V4 <br> with Smile
                         </h1>
                         <p class="text-[16px] font-light">
-                            Amet minim mollit non deserunt ullamco
-                            est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
+                            Experience unmatched speed, comfort, and safety with the all-new R15 V4. Designed for thrill-seekers and everyday riders alike!
                         </p>
                         <button class="btn bg-bike-primary text-white">
                             Purchase
@@ -100,7 +99,7 @@
                     <a href="#slide2" class="btn btn-circle">❯</a>
                 </div>
             </div>
-
+            <!-- Slide 2 -->
             <div id="slide2" class="carousel-item relative w-full">
                 <div class="flex flex-col lg:flex-row p-12 lg:p-24">
                     <!-- text contents -->
@@ -109,8 +108,7 @@
                             Ride-on R15 V4 <br> with Smile
                         </h1>
                         <p class="text-[16px] font-light">
-                            Amet minim mollit non deserunt ullamco
-                            est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
+                            Ride with confidence and thrill on the R15 V4! Superior speed, comfort, and control for every adventure.
                         </p>
                         <button class="btn bg-bike-primary text-white">
                             Purchase
@@ -126,7 +124,7 @@
                     <a href="#slide3" class="btn btn-circle">❯</a>
                 </div>
             </div>
-
+            <!-- Slide 3 -->
             <div id="slide3" class="carousel-item relative w-full">
                 <div class="flex flex-col lg:flex-row p-12 lg:p-24">
                     <!-- text contents -->
@@ -135,8 +133,7 @@
                             Ride-on R15 V4 <br> with Smile
                         </h1>
                         <p class="text-[16px] font-light">
-                            Amet minim mollit non deserunt ullamco
-                            est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
+                            Experience next-level performance with the R15 V4—crafted for speed lovers and everyday riders seeking excellence!
                         </p>
                         <button class="btn bg-bike-primary text-white">
                             Purchase
@@ -152,7 +149,7 @@
                     <a href="#slide4" class="btn btn-circle">❯</a>
                 </div>
             </div>
-
+            <!-- Slide 4 -->
             <div id="slide4" class="carousel-item relative w-full">
                 <div class="flex flex-col lg:flex-row p-12 lg:p-24">
                     <!-- text contents -->
@@ -161,8 +158,7 @@
                             Ride-on R15 V4 <br> with Smile
                         </h1>
                         <p class="text-[16px] font-light">
-                            Amet minim mollit non deserunt ullamco
-                            est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
+                            Unleash the perfect blend of power, style, and safety with the all-new R15 V4—built for adrenaline and daily rides alike!
                         </p>
                         <button class="btn bg-bike-primary text-white">
                             Purchase
@@ -201,8 +197,7 @@
                     <div class="card-body space-y-5">
                         <h2 class="card-title">Ducati XDIAVEL S-73</h2>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
-                            fermentum amet faucibus sed id nisi lectus at.
+                            The Ducati XDiavel S-73 offers a perfect blend of cruiser comfort and sportbike performance, making every ride thrilling.
                         </p>
                         <div class="card-actions">
                             <button class="btn bg-bike-primary text-white">
@@ -217,10 +212,9 @@
                         <img src="images/others/latest2.png" alt="Shoes" />
                     </figure>
                     <div class="card-body space-y-5">
-                        <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                        <h2 class="card-title">Motorcycles & Scooters</h2>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
-                            fermentum amet faucibus sed id nisi lectus at.
+                            Discover a wide range of motorcycles and scooters that fit your style, from daily commuting to high-speed adventures.
                         </p>
                         <div class="card-actions">
                             <button class="btn bg-bike-primary text-white">
@@ -235,10 +229,9 @@
                         <img src="images/others/latest3.png" alt="Shoes" />
                     </figure>
                     <div class="card-body space-y-5">
-                        <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                        <h2 class="card-title">2021 Honda CBR500R</h2>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
-                            fermentum amet faucibus sed id nisi lectus at.
+                            The 2021 Honda CBR500R delivers power, precision, and a smooth riding experience, perfect for both beginners and pros.
                         </p>
                         <div class="card-actions">
                             <button class="btn bg-bike-primary text-white">
@@ -252,7 +245,8 @@
 
         <!-- happy clients section -->
         <section class="my-24">
-            <h3 class="font-semibold text-[48px] text-center mb-[50px]">Happy <span class="text-bike-primary">Clients says</span></h3>
+            <h3 class="font-semibold text-[48px] text-center mb-[50px]">Happy <span class="text-bike-primary">Clients
+                    says</span></h3>
 
             <!-- client card container -->
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-11">
@@ -266,10 +260,7 @@
                     <!-- card1 texts -->
                     <div class="space-y-4 p-9">
                         <p>
-                            Slate helps you see how
-                            many more days you need
-                            to work to reach your financial
-                            goal for the month and year.
+                            Biker Zone provided me with the perfect bike! The comfort and performance exceeded my expectations. Highly recommended!
                         </p>
                         <div class="rating">
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
@@ -298,10 +289,7 @@
                     <!-- card2 texts -->
                     <div class="space-y-4 p-9">
                         <p>
-                            Slate helps you see how
-                            many more days you need
-                            to work to reach your financial
-                            goal for the month and year.
+                            Absolutely love my new ride from Biker Zone! The quality and smooth handling make every journey enjoyable.
                         </p>
                         <div class="rating">
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
@@ -330,10 +318,7 @@
                     <!-- card3 texts -->
                     <div class="space-y-4 p-9">
                         <p>
-                            Slate helps you see how
-                            many more days you need
-                            to work to reach your financial
-                            goal for the month and year.
+                            Biker Zone made my dream bike a reality! Exceptional service and top-notch performance—couldn’t be happier!
                         </p>
                         <div class="rating">
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
@@ -351,15 +336,108 @@
                         </h4>
                     </div>
                 </div>
+            </div>
 
+        </section>
+
+        <!-- faq section -->
+        <section>
+            <h3 class="font-semibold text-[48px] text-center mb-[50px]">
+                Frequently Asked <span class="text-bike-primary">Questions</span>
+            </h3>
+            <!-- hero part -->
+            <div class="hero">
+                <!-- hero image and accordion container -->
+                <div class="hero-content flex-col lg:flex-row gap-20">
+                    <!-- image part -->
+                    <img src="images/others/faq.png" class="w-full" />
+                    <!-- accordion part -->
+                    <div class="space-y-4">
+                        <!-- accordion 1 -->
+                        <div class="collapse collapse-arrow border">
+                            <input type="radio" name="my-accordion-2" checked="checked" />
+                            <div class="collapse-title text-xl font-medium">What are the most important things I should
+                                know about riding a bike?</div>
+                            <div class="collapse-content">
+                                <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and
+                                    laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This
+                                    will help you be a more focused and legally compliant bike rider.
+                                </p>
+                            </div>
+                        </div>
+                        <!-- accordion 2 -->
+                        <div class="collapse collapse-arrow border">
+                            <input type="radio" name="my-accordion-2" />
+                            <div class="collapse-title text-xl font-medium">How can I tell if my helmet is old and I
+                                need a
+                                new one?</div>
+                            <div class="collapse-content">
+                                <p>Helmets typically last 5-7 years from the manufacture date. Look for a sticker inside
+                                    with the date.</p>
+                            </div>
+                        </div>
+                        <!-- accordion 3 -->
+                        <div class="collapse collapse-arrow border">
+                            <input type="radio" name="my-accordion-2" />
+                            <div class="collapse-title text-xl font-medium">My bike has been in storage is it safe to
+                                ride?</div>
+                            <div class="collapse-content">
+                                <p>Squeeze the brake levers to ensure they engage properly. Check for worn brake pads or
+                                    loose cables.
+                                </p>
+                            </div>
+                        </div>
+                        <!-- accordion 4 -->
+                        <div class="collapse collapse-arrow border">
+                            <input type="radio" name="my-accordion-2" checked="checked" />
+                            <div class="collapse-title text-xl font-medium">What rules should I follow when riding my
+                                bike?</div>
+                            <div class="collapse-content">
+                                <p>Keep a steady line and avoid sudden movements to help others anticipate your actions.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
         </section>
     </main>
-
     <!-- footer section -->
     <footer>
-
+        <footer class="footer bg-[#0B0D17] text-neutral-content p-10 justify-between px-[165px]">
+            <aside>
+                <div class="flex gap-5 font-normal text-[16px]">
+                    <p>
+                        Download Now
+                    </p>
+                    <p>
+                        License
+                    </p>
+                </div>
+                <div class="lgflex gap-5 font-normal text-[16px]">
+                    <p>About</p>
+                    <p>Features</p>
+                    <p>Pricing</p>
+                    <p>Careers</p>
+                    <p>Help</p>
+                    <p>Privacy Policy</p>
+                </div>
+                <br>
+                <p class="font-normal text-[14px]">© 2020 bike. All rights reserved</p>
+            </aside>
+            <nav>
+                <h6 class="footer-title">Get the app</h6>
+                <div class="grid grid-cols-1 gap-4">
+                    <a>
+                        <img class="w-36" src="images/others/ios.png" alt="">
+                    </a>
+                    <a>
+                        <img class="w-36" src="images/others/android.png" alt="">
+                    </a>
+                </div>
+            </nav>
+        </footer>
     </footer>
 </body>
 
